Test new method of preventing visible mobile overflow

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 
 .overflow-wrapper {
     overflow-x: hidden;
+    position: relative;
 }
 
 header {
